# linguaedit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  Traduco-windows.spec  auto_translate.py  fix_last.py  io.github.yeager.linguaedit.desktop  io.github.yeager.linguaedit.metainfo.xml  io.github.yeager.linguaedit.yml  linguaedit_0.4.0_all.deb  linguaedit_1.8.4_all.deb  pyproject.toml  se.danielnylander.Traduco.yml  traduco_0.2.0_all.deb
.github/scripts/: build_deb.py
.github/workflows/: build-deb.yml  build.yml  transifex-sync.yml
.tx/: config
data/: io.github.yeager.linguaedit.desktop  io.github.yeager.linguaedit.xml
debian/: changelog  copyright
docs/: api.md  usage.md
installer/: linguaedit.iss
linguaedit-deb-build/DEBIAN/: control  postinst
man/: linguaedit-gui.1
po/: lexiloom.pot  sv.po  sv.po~  traduco.pot
po/sv/LC_MESSAGES/: lexiloom.mo
scripts/: build-deb.sh  build-rpm.sh  linguaedit.spec  transifex_sync.sh  update_translations.py
snap/: snapcraft.yaml
src/lexiloom/: __init__.py  app.py
src/linguaedit/: __init__.py  app.py
src/traduco/: __init__.py  app.py
translations/: README.md  linguaedit_da.qm  linguaedit_da.ts  linguaedit_de.qm  linguaedit_de.ts  linguaedit_es.qm  linguaedit_es.ts  linguaedit_fr.qm  linguaedit_fr.ts  linguaedit_ja.qm  linguaedit_ja.ts  linguaedit_ko.ts  linguaedit_nb.qm  linguaedit_nb.ts  linguaedit_pl.qm  linguaedit_pl.ts  linguaedit_pt_BR.ts  linguaedit_sv.qm  linguaedit_sv.ts  linguaedit_template.pot  linguaedit_template.ts  linguaedit_zh_CN.qm  linguaedit_zh_CN.ts
ui/: syntax_highlighting.py
(+78 files in other folders)
